<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@color/white" >
	
	    <include layout="@layout/main_header" />

		<com.zcj.android.view.pulltorefreshbyhandmark.PullToRefreshScrollView
		    android:id="@+id/project_scrollview"
			android:layout_width="fill_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="1"
			android:scrollbars="vertical">
	    
		    <LinearLayout
			    android:orientation="vertical"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@color/white" >
			    
<FrameLayout
    android:id="@+id/project_imgslayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/project_image_none"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/d_default_goods_none"
        android:visibility="gone" />
    
    <android.support.v4.view.ViewPager
        android:id="@+id/project_imageviewpage_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|center">
        
        <LinearLayout
	        android:id="@+id/project_imageviewpage_pointlayout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="6dp"
	        android:orientation="horizontal" >
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="35dp"
	        android:layout_gravity="bottom"
	        android:background="#9958574F"
	        android:orientation="horizontal"
	        android:gravity="center">
	
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="15dp"
	            android:src="@drawable/d_time_detail" />
	        
	        <TextView
	            android:id="@+id/project_imageviewpage_title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="4dp"
	            android:textColor="#cac8c8"
	            android:textSize="@dimen/text_size_default"/>
	        
	    </LinearLayout>
    
    </LinearLayout>

</FrameLayout>
			
			    <TextView
			        android:id="@+id/project_name"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="5dp"
			        android:layout_marginLeft="10dp"
			        android:layout_marginRight="10dp"
			        android:layout_marginTop="10dp"
			        android:textColor="@color/text"
			        android:textSize="@dimen/text_size_default"
			        android:text="@string/default_loading"/>
			
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal" >
			
			        <TextView
			            android:id="@+id/project_price"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginBottom="5dp"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="5dp"
			            android:layout_marginTop="5dp"
			            android:textSize="20sp"
			            android:textColor="#F66060"
			            android:text="￥-" />
			
			        <TextView
			            android:id="@+id/project_price2"
			            android:layout_width="0dp"
			            android:layout_height="wrap_content"
			            android:layout_weight="1"
			            android:layout_marginBottom="5dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="5dp"
			            android:text="@string/project_price2"/>
			
			        <ImageView
			            android:id="@+id/project_share"
			            android:layout_width="40dp"
			            android:layout_height="30dp"
        				android:scaleType="centerInside"
			            android:src="@drawable/d_share_goods"
			            android:contentDescription="分享" />
			
			        <ImageView
			            android:id="@+id/project_favorite"
			            android:layout_width="40dp"
			            android:layout_height="30dp"
        				android:scaleType="centerInside"
			            android:contentDescription="@string/favorite_uncheck"
			            android:src="@drawable/d_sc_topic" />
			
			    </LinearLayout>
			
			    <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:background="#E6E6E6" >
	
	                <ImageView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:layout_marginBottom="5dp"
	                    android:layout_marginLeft="8dp"
	                    android:layout_marginRight="3dp"
	                    android:layout_marginTop="5dp"
	                    android:src="@drawable/d_circle" />
	
	                <TextView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:layout_marginBottom="5dp"
	                    android:layout_marginTop="5dp"
	                    android:textColor="@color/black"
	                    android:text="商品简介" />
	            </LinearLayout>
			
			    <TextView
			        android:id="@+id/project_content"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="5dp"
	                android:layout_marginLeft="10dp"
	                android:layout_marginRight="10dp"
	                android:layout_marginTop="5dp"
	                android:textSize="14sp"
	                android:textColor="@color/text"
	                android:text="@string/default_loading"/>
			
			    <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:background="#E6E6E6" >
	
	                <ImageView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:layout_marginBottom="5dp"
	                    android:layout_marginLeft="8dp"
	                    android:layout_marginRight="3dp"
	                    android:layout_marginTop="5dp"
	                    android:src="@drawable/d_circle" />
	
	                <TextView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:layout_gravity="center_vertical"
	                    android:layout_marginBottom="5dp"
	                    android:layout_marginTop="5dp"
	                    android:textColor="@color/black"
	                    android:text="累计评论" />
	                
	                <TextView
	                    android:id="@+id/project_djpl"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:layout_marginBottom="5dp"
	                    android:layout_marginRight="10dp"
	                    android:layout_marginTop="5dp"
	                    android:text="点击评论"
	                    android:textColor="@color/black" />
	                
	            </LinearLayout>
	            
			    <com.zcj.android.view.listviewforscroll.ListViewForScrollView
	                android:id="@+id/project_listview"
	                style="@style/d_listview_noweight"/>
	
	            <include layout="@layout/layout_sub_loadmore"/>
			    
			</LinearLayout>
		</com.zcj.android.view.pulltorefreshbyhandmark.PullToRefreshScrollView>
	</LinearLayout>
	
	<ImageView
	    android:id="@+id/project_buy"
	    android:layout_width="81dp"
	    android:layout_height="40dp"
	    android:layout_gravity="bottom|right"
	    android:layout_marginBottom="10dp"
	    android:layout_marginRight="5dp"
	    android:src="@drawable/d_project_unbuy" />

	<include layout="@layout/layout_sub_editor"/>
	
</FrameLayout>